# ollama_bash_command_error

./: Cargo.toml  README.md  install.sh
src/: main.rs
