[package]
name = "ollama-bash-command-error"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Make a call to Ollama when you mis-spell a bash command"
readme = "README.md"

include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
bytes = "1"
